solution files are now tracked

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
 # visual studio files
 .vs/
-*.sln
-*.vcxproj
-*.vcxproj.filters
-*.vcxproj.user
+# *.sln
+# *.vcxproj
+# *.vcxproj.filters
+# *.vcxproj.user
 
 # visual studio build directories
 Debug/
